Fix firefox layout bug

--- a/app/styles/home-page.scss
+++ b/app/styles/home-page.scss
@@ -173,6 +173,7 @@
           text-transform: uppercase;
           font-weight: bold;
           left: 0;
+          top: 0;
         }
 
         .scienceCalendar-scienceTag {
